' java.exe -jar C:\Apps\bin\plantuml.jar .\docs\seating_planner.puml
@startuml
class SeatingPlanner {
    - String title
    - int num_rows
    - int seats_per_row
    - AppConfiguration config
    - Dict<String, SeatStatus> status_map
    - List<List<Seat>> _seating_plan
    - IBookingRepository _repository
    - Dict<String, List<Tuple<int, int>>> _confirmed_bookings

    + SeatingPlanner(String title, int num_rows, int seats_per_row, String db_path, AppConfiguration config, IBookingRepository repository)
    + SeatingPlan get_seating_plan(Optional<String> booking_id)
    + String book_seats(int number_of_seats, Optional<String> start_seat)
    + String cancel_booking(String booking_id)

    - List<List<Seat>> _initialize_seating_plan()
    - void _apply_bookings_to_plan()
    - Tuple<int, int> _seat_label_to_indices(String seat_label)
}

class AppConfiguration
class IBookingRepository
class BookingRepository
class Seat
class SeatingPlan
class SeatStatus

SeatingPlanner --> AppConfiguration
SeatingPlanner --> IBookingRepository
SeatingPlanner --> BookingRepository
SeatingPlanner --> Seat
SeatingPlanner --> SeatingPlan
SeatingPlanner --> SeatStatus
@enduml
